[gd_scene load_steps=6 format=2]

[ext_resource path="res://Spawner.gd" type="Script" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Steve.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mont.tres" type="DynamicFont" id=4]
[ext_resource path="res://swish.wav" type="AudioStream" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Spawner" type="Node2D" parent="."]
position = Vector2( 1363, 360 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="Spawner"]

[node name="SteveTop" parent="." instance=ExtResource( 3 )]
position = Vector2( 50, 168 )

[node name="SteveBot" parent="." instance=ExtResource( 3 )]
position = Vector2( 50, 360 )

[node name="FilterTop" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FilterBot" type="ColorRect" parent="."]
margin_top = 360.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 23.0
margin_top = 18.0
margin_right = 63.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
margin_left = 12.6134
margin_top = 693.74
margin_right = 52.6134
margin_bottom = 707.74
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Switch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
[connection signal="add_score" from="SteveTop" to="." method="_on_SteveTop_add_score"]
[connection signal="game_over" from="SteveTop" to="." method="_on_SteveTop_game_over"]
[connection signal="add_score" from="SteveBot" to="." method="_on_SteveBot_add_score"]
[connection signal="game_over" from="SteveBot" to="." method="_on_SteveBot_game_over"]
